--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --host 0.0.0.0 --port 4173",
-    "start": "vite preview --host 0.0.0.0 --port 4173"
+    "serve": "vite build && vite preview --host 0.0.0.0 --port 4173",
+    "start": "vite build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
